# tea

./: .gitignore  README.md  pytest.ini  requirements.txt
client/: __init__.py  client.py  setup.cfg
product_api_schema/: openapi.yaml
product_data_cli/: README.md  data_models.py  main.py  storage.py
server/: app.py  setup.cfg
tests/: conftest.py  test_client.py  test_products.py  test_server.py
