[metadata]
name = tea_client
version = 0.1.0
description = Transparency Exchange API Client
author = AI Agent Jules
license = Apache-2.0
# Add other metadata if desired

[options]
packages = find:
python_requires = >=3.7
install_requires =
    requests>=2.20
    # Add any other direct dependencies of the client app itself, if any

[options.packages.find]
where = .
