[metadata]
name = tea_server
version = 0.1.0
description = Transparency Exchange API Server
author = AI Agent Jules
license = Apache-2.0
# Add other metadata if desired

[options]
packages = find:
python_requires = >=3.7
install_requires =
    Flask>=2.0
    # Add any other direct dependencies of the server app itself, if any were added beyond Flask

[options.packages.find]
where = .
